# AutoDev

./: .gitignore  .gitmodules  README.md  compose.yml  config.yaml  django-description.md  pyproject.toml
auto_dev/: __init__.py
auto_dev/assistant/: __init__.py  __main__.py  graph_db_proxy.py  llm_prompt_templates.py  questions_assistant.py
auto_dev/assistant/tasks_assistant/: __init__.py  __main__.py  llm_prompt_templates.py
auto_dev/assistant/tools/: filesystem.py  vectorstore.py
auto_dev/common/: vector_store_interface.py
auto_dev/common/custom_blob_loaders/: improved_file_system_blob_loader.py
auto_dev/context_generator/: __main__.py  context_types.py  document_parsing.py  generator.py  graph_db_proxy.py  llm_prompt_templates.py  types.py
