[project]
name = "auto_dev"
version = "0.0.1"
dependencies = [
    "langchain~=0.0.343",
    "tiktoken~=0.5.1",
    "openai~=1.3.6",
    "unstructured~=0.11.2",
    "markdown~=3.5.1",
    "PyYAML~=6.0.0",
    "pip~=23.2.1",
    "emoji~=2.8.0",
    "attrs~=23.1.0",
    "distro~=1.8.0",
    "wheel~=0.41.2",
    "colorama~=0.4.6",
    "regex~=2023.10.3",
    "click~=8.1.7",
    "setuptools~=68.2.0",
    "aiohttp~=3.9.1",
    "numpy~=1.26.2",
    "packaging~=23.2",
    "zipp~=3.17.0",
    "neo4j~=5.15.0",
    "findimports~=2.3.0",
]
